wumpe (1.1) buster; urgency=medium

  * add automatic config file handling

 -- Michael Loipfuehrer <michael.loipfuehrer@stusta.de>  Sat, 19 Aug 2019 20:45:28 +0200

wumpe (1.0) buster; urgency=medium

  * Initial release

 -- Michael Loipfuehrer <michael.loipfuehrer@stusta.de>  Sat, 17 Aug 2019 20:45:28 +0200