@@ -1,3 +1,9 @@
+wumpe (1.2) stretch,buster; urgency=medium
+
+  * also build for stretch
+
+ -- Michael Loipfuehrer <michael.loipfuehrer@stusta.de>  Sat, 19 Aug 2019 19:45:28 +0200
+
 wumpe (1.1) buster; urgency=medium
 
   * add automatic config file handling
